--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx ./src"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "textalive-app-api": "^0.3.2"
   },
   "devDependencies": {
