--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,37 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "node": true,
+    "es2022": true
   },
-  "extends": [
-    "standard-with-typescript",
-    "plugin:react/recommended",
-    "prettier"
-  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "project": "./tsconfig.eslint.json",
-    "sourceType": "module"
+    "project": "./tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
-  "plugins": ["react"],
-  "rules": {}
+  "extends": [
+    "eslint:recommended",
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "airbnb",
+    "airbnb-typescript",
+    "prettier"
+  ],
+  "plugins": ["@typescript-eslint", "react"],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-no-useless-fragment": "off",
+    "arrow-body-style": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "react/prop-types": "off"
+  }
 }
